apps/demo-nginx/base/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  labels:
    app.kubernetes.io/name: demo-nginx
    owner: platform
spec:
  selector:
    app.kubernetes.io/name: demo-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
