apps/demo-nginx/base/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  labels:
    app.kubernetes.io/name: demo-nginx
    owner: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  labels:
    app.kubernetes.io/name: demo-nginx
    owner: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: demo-nginx
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-https-egress
  labels:
    app.kubernetes.io/name: demo-nginx
    owner: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: demo-nginx
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-alb
  labels:
    app.kubernetes.io/name: demo-nginx
    owner: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: demo-nginx
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
